--- a/platforms/browser/www/css/index.css
+++ b/platforms/browser/www/css/index.css
@@ -63,7 +63,7 @@ body {
     /* background:url(../img/logo.png) no-repeat center top; 170px x 200px */
     position:absolute;             /* position in the center of the screen */
     left:50%;
-    top:50%;
+    top:5%;
     height:50px;                   /* text area height */
     width:225px;                   /* text area width */
     text-align:center;
@@ -77,11 +77,30 @@ body {
 
 }
 
+/*quizz*/
+
+.tituloquestion{
+    position: relative;
+    float: right;
+    display: inline;
+    text-align: left;
+}
+
+.one{
+    position: relative;
+    position: 20px;
+    float: left;
+    display: inline;
+
+}
+
+
+
 /* Landscape layout (with min-width) */
 @media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
     .app {
         background-position:left center;
-        padding:75px 0px 75px 170px;  /* padding-top + padding-bottom + text area = image height */
+        padding:10px 0px 10px 170px;  /* padding-top + padding-bottom + text area = image height */
         margin:-90px 0px 0px -198px;  /* offset vertical: half of image height */
                                       /* offset horizontal: half of image width and text area width */
     }
